resources/public/css/site.less
/* mixin-type classes */

.clickable {
    cursor: pointer;
}

/* main styles */

.navbar {
    padding-bottom: 0;

    &>.container {
        padding-right: 0;
    }

    .navbar-header {
        float: left;
    }

    .navbar-brand {
        line-height: 20px;
        padding: 15px 0;
    }

    .navbar-collapse, .navbar-toggle {
        // align-self: flex-end;
        margin-left: auto;
        float: right;
    }

    .navbar-nav {
        float: left;
    }

    // .collapse.in {
    //     background: white;
    //     position: absolute;
    //     right: 2em;
    //     top: 1em;
    // }

    button.navbar-toggle {
        border: none;
        padding-right: 0;
    }

    .nav-link {
        padding: 0;

        &:not(.active):hover {
            background: none !important;
            border: none !important;
        }
    }

    .nav > .active > a {
        background: none !important;
        border: none !important;
    }

    .nav-tabs > li > a {
        border: none;
        border-radius: 0;
    }
}

.invisible {
    visibility: hidden;
}

.editor {
    font-family: monospace;
}

.cols-item {
    &:first-child .col-separator {
        display: none !important;
    }

    .col-separator {
        height: 1em;
    }
}

.selectable-set,.tag-cloud  {
    > div {
        float: left;
    }

    &:after {
        clear: both;
    }
}

// remove the ugly outline on osx
.form-control:focus {
    outline: 0 none;
    border-color: transparent;
    box-shadow: none;
}

input.number, input.big-number {
    text-align: center;
}

.card {
    padding: 1em;
}

.rc-dropdown {
    // background: no-repeat bottom,50% calc(100% - 1px);
    background-size: 0 100%,100% calc(100% - 1px);
    border: 0;
    -webkit-transition: background 0s ease-out;
    transition: background 0s ease-out;

    background-image: -webkit-linear-gradient(bottom,#009688 2px,rgba(0,150,136,0) 0),-webkit-linear-gradient(bottom,rgba(0,0,0,.26) 1px,transparent 0);
    background-image: linear-gradient(0deg,#009688 2px,rgba(0,150,136,0) 0),linear-gradient(0deg,rgba(0,0,0,.26) 1px,transparent 0);

    .chosen-single {
        background: none;
        border: none;
        border-radius: 0;
        box-shadow: none;
    }
}

.container {
    .sheets {
        padding: 0 10%;

        .table {
            min-width: 250px !important;
        }
    }
}

